--- a/Blog-Template.css
+++ b/Blog-Template.css
@@ -9,8 +9,8 @@
 }
 
 .u-section-1 .u-repeater-1 {
-  grid-auto-columns: calc(33.3333% - 14.6667px);
-  grid-template-columns: repeat(3, calc(33.3333% - 14.6667px));
+  grid-auto-columns: calc(50% - 11px);
+  grid-template-columns: repeat(2, calc(50% - 11px));
   min-height: 441px;
   grid-gap: 22px;
 }
@@ -73,44 +73,15 @@
   padding: 0;
 }
 
-.u-section-1 .u-container-layout-3 {
-  padding: 30px 20px;
-}
-
-.u-section-1 .u-text-5 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-image-3 {
-  height: 222px;
-  margin-top: 17px;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-text-6 {
-  margin-top: 20px;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-btn-3 {
-  background-image: none;
-  border-style: solid;
-  margin: 17px auto 0 0;
-  padding: 0;
-}
-
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 484px;
+  .u-section-1 .u-repeater-1 {
+    grid-auto-columns: calc(33.3333% - 14.6667px);
+    grid-template-columns: repeat(3, calc(33.3333% - 14.6667px));
+    min-height: 362px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 956px;
-  }
-
   .u-section-1 .u-repeater-1 {
     grid-auto-columns: calc(50% - 11px);
     grid-template-columns: repeat(2, calc(50% - 11px));
@@ -138,15 +109,6 @@
   }
 
   .u-section-1 .u-image-2 {
-    height: 278px;
-  }
-
-  .u-section-1 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-1 .u-image-3 {
     height: 278px;
   }
 }
