--- a/Terapia-de-pareja-near-me.css
+++ b/Terapia-de-pareja-near-me.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url('images/pexels-photo-4101143.jpeg');
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url('images/pexels-photo-4101143.jpeg');
   background-position: 50% 50%;
 }
 
@@ -21,7 +21,8 @@
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 2.25rem;
+  font-size: 2.22222rem;
+  text-shadow: -2px 2px 8px rgba(128,128,128,1);
   margin: 0 auto;
 }
 
